# proofpals

./: .gitignore  LICENSE  README.md  main-auths-dep.patch  suggestions.md  tasklist.md
backend/: .env  FINAL_SPRINT_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  SETUP.md  STRUCTURE.md  admin_token.txt  alembic.ini  auth_schemas.py  auth_service.py  config.py  config_updates.py  create_adminuser.py  crypto_service.py  data.json  database.py  env.example  escalation_service.py  filelist.txt  five_person_test.py  init_db.py  main.py  main_auth_endpoints.py  master_test.py  master_test_runner.py  migrate_add_crypto_keys.py  migrate_add_user_to_submissions.py  models.py  models_auth_extension.py  monitoring_service.py  performance_metrics.py  performance_report_20251030_110329.json  performance_report_20251030_111022.json  performance_report_20251030_111459.json  performance_report_20251030_112326.json  published_pubkeys.json  quick_test.py  rate_limiter.py  requirements.txt  start.py  (+15 more)
backend/alembic/: 001_initial.py
backend/app/: config.py
pp_clsag_core/: .gitignore  Cargo.toml  api.py  dummy.py  explainer.md  test_results.md  test_runner.py
pp_clsag_core/benchmarks/: clsag.md
pp_clsag_core/env/: pyvenv.cfg
pp_clsag_core/env/Scripts/: activate  activate.bat
pp_clsag_core/examples/: benchmark_clsag.py  blind_signature_example.py  complete_workflow.py  pedersen_commitment_example.py  ring_signature_example.py
pp_clsag_core/src/: lib.rs  libnew.rs
proofpals-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+87 files in other folders)
