
[package]
name = "pp_clsag_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pp_clsag_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
curve25519-dalek = "4.1"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
rsa = "0.9"
num-bigint = "0.4"
merlin = "3.0"
proptest = { version = "1.0", optional = true }

[features]
default = []
proptest = ["dep:proptest"]

[build-dependencies]
pyo3-build-config = "0.21"